[package]
name = "slot-sim-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
slot_sim = { path = ".." }

# Prevent cargo-fuzz from treating fuzz targets as doc-tests.
[profile.release]
opt-level = 3
debug = false

[[bin]]
name = "fuzz_alias"
path = "fuzz_targets/fuzz_alias.rs"
test = false
doc = false

[[bin]]
name = "fuzz_packed_grid"
path = "fuzz_targets/fuzz_packed_grid.rs"
test = false
doc = false

[[bin]]
name = "fuzz_eval_config"
path = "fuzz_targets/fuzz_eval_config.rs"
test = false
doc = false
