[workspace]

[package]
name = "ce-copy-test"
version = "0.1.0"
edition = "2021"
description = "CE COPY TEST — 1:1 paymodel copy of Cash Eruption (verification/stomping engine)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "ce-sim"
path = "src/bin/ce_sim.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_pcg = "0.3"
rayon = "1.10"
clap = { version = "=4.5.20", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
